# android_silk_arm

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/reinhard/silk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/reinhard/silk/: AudioCodec.java  MainActivity.java
app/src/main/jni/: AudioCodec.c  AudioCodec.h
app/src/main/jni/lame/: LameCodec.c  LameCodec.h
app/src/main/jni/lame/frontend/: lame_main.c  main.h
app/src/main/jni/lame/libmp3lame/: util.h
app/src/main/jni/silk/: SilkCodec.c  SilkCodec.h
app/src/main/jni/silk/test/: Decoder.c  Encoder.c
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/reinhard/silk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
